# dekstop-qr-printer-santra

./: .gitignore  FEATURES.md  README.md  RUST_ICED_PROMPT.md  create-icon.ps1  create_app_icon.py  create_icon.py  index.html  package.json  vite.config.ts
src/: App-additional.css  App.css  App.tsx  App_OLD.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/printer/: detection.rs  mod.rs  printing.rs  printing_old.rs
src-tauri/src/qr/: generator.rs  mod.rs
src/components/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx  Login_OLD.css  Login_OLD.tsx  PrintPreview.css  PrintPreview.tsx  PrintPreview_OLD.tsx  PrinterSelector.tsx  QRInput.tsx  QueueService.css  QueueService.tsx
src/services/: api.ts
src/types/: index.ts  ticket.ts
