[package]
name = "qr-printer-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qrcode = "0.12"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[package.metadata.tauri]
bundle = { identifier = "com.example.qrprinterapp", name = "QR Printer App", version = "0.1.0" }
